Resolves #122 fixed avatars on mobile

--- a/woe/static/local/themes/default.css
+++ b/woe/static/local/themes/default.css
@@ -473,7 +473,7 @@ background-color: rgb(248, 248, 248);}
   float: right;
 }
 .status-reply {
-  margin-left: 30px;
+/*  margin-left: 30px;*/
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
